--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -33,9 +33,9 @@
             <!-- small box -->
             <div class="small-box bg-aqua">
                 <div class="inner">
-                    <h3 th:text="${dashboardData.box1.Title}"/>
+                    <h4 th:text="${dashboardData.box1.Title}"/>
 
-                    <p th:text="${dashboardData.box1.Value}"/>
+                    <h5 th:text="${dashboardData.box1.Value}"/>
                 </div>
                 <div class="icon">
                     <i class="ion ion-bag"></i>
@@ -48,9 +48,9 @@
             <!-- small box -->
             <div class="small-box bg-green">
                 <div class="inner">
-                    <h3 th:text="${dashboardData.box2.Title}"/>
+                    <h4 th:text="${dashboardData.box2.Title}"/>
 
-                    <p th:text="${dashboardData.box2.Value}"/>
+                    <h5 th:text="${dashboardData.box2.Value}"/>
                 </div>
                 <div class="icon">
                     <i class="ion ion-stats-bars"></i>
@@ -63,9 +63,9 @@
             <!-- small box -->
             <div class="small-box bg-yellow">
                 <div class="inner">
-                    <h3 th:text="${dashboardData.box3.Title}"/>
+                    <h4 th:text="${dashboardData.box3.Title}"/>
 
-                    <p th:text="${dashboardData.box3.Value}"/>
+                    <h5 th:text="${dashboardData.box3.Value}"/>
                 </div>
                 <div class="icon">
                     <i class="ion ion-person-add"></i>
@@ -78,9 +78,9 @@
             <!-- small box -->
             <div class="small-box bg-red">
                 <div class="inner">
-                    <h3 th:text="${dashboardData.box4.Title}"/>
+                    <h4 th:text="${dashboardData.box4.Title}"/>
 
-                    <p th:text="${dashboardData.box4.Value}"/>
+                    <h5 th:text="${dashboardData.box4.Value}"/>
                 </div>
                 <div class="icon">
                     <i class="ion ion-pie-graph"></i>
