--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -3,21 +3,17 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorate="layout">
 <head>
-    <title th:text="#{customer.index.title} + #{customer.index.header}"/>
-
-    <style>
-        .pagination {
-            display: inline-block;
-        }
-    </style>
+    <title>Customers - Overview</title>
 </head>
 <body>
 <section layout:fragment="header">
-    <h1 th:text="#{customer.index.title}"/>
+    <h1>
+        Customers
+    </h1>
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-inbox"></i> Home</a></li>
-        <li th:text="#{customer.index.title}"></li>
-        <li class="active" th:text="#{customer.index.header}"/>
+        <li>Customers</li>
+        <li class="active">Overview</li>
     </ol>
 </section>
 <div layout:fragment="content">
@@ -25,20 +21,15 @@
         <div class="col-xs-12">
             <div class="box">
                 <div class="box-header">
-                    <h3 class="box-title" th:text="#{customer.index.header}"/>
+                    <h3 class="box-title">Overview</h3>
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body table-responsive">
 
-                    <div style="position: absolute;top: 8px;right: 12px;">
-                        <a href="?lang=en">English</a>|<a href="?lang=nl">Nederlands</a>
-                    </div>
-
                     <div class="flex-wrapper" style="display: flex; align-items: center;">
                         <div class="btn-group" style="margin: 0 50px 0 20px;">
-                            <a th:href="@{~/customer/new/(lang=${currentLocale})}" class="btn btn-app">
-                                <span class="fa fa-plus"> <p th:text="#{customer.index.add}" /></span>
-                                <br/>
+                            <a th:href="@{~/customer/new}" class="btn btn-app">
+                                <span class="fa fa-plus"></span> Add
                             </a>
                         </div>
 
@@ -50,24 +41,15 @@
                                 </th:block>
                             </div>
                         </div>
-
-                        <div th:if="${error}" style="flex: 1; margin: 0 30px;">
-                            <div layout:include="fragments/alert :: alert" th:with="type='error', header='Error'" th:remove="tag">
-                                <!--/* Implements alert summary fragment with full-blown HTML summary */-->
-                                <th:block layout:fragment="alert-content">
-                                    <p th:text="${error}">Message</p>
-                                </th:block>
-                            </div>
-                        </div>
                     </div>
 
                     <table class="table table-hover">
                         <tbody><tr>
                             <th>ID</th>
-                            <th th:text="#{customer.index.fullname}"></th>
-                            <th th:text="#{customer.index.emailaddress}"> E-</th>
-                            <th th:text="#{customer.index.phonenumber}"></th>
-                            <th th:text="#{customer.index.city}"></th>
+                            <th>Fullname</th>
+                            <th>E-mail</th>
+                            <th>Phone</th>
+                            <th>City</th>
                             <th width="4%" sec:authorize="hasAnyRole('ROLE_CUSTOMER', 'ROLE_ADMIN')">&nbsp;</th>
                         </tr>
                         <!--/*@thymesVar id="customers" type="avans.ivh11a1.facturatie.controller.CustomerController"*/-->
@@ -77,7 +59,7 @@
                                 <a th:href="@{~/invoice/show/} + ${customer.csn}" sec:authorize="hasAnyRole('ROLE_FINANCIAL', 'ROLE_INSURANCE', 'ROLE_ADMIN')">
                                     <span th:text="${customer.fullName}"/>
                                 </a>
-                                <!--<span th:text="${customer.fullName}" sec:authorize="hasAnyRole('ROLE_CUSTOMER')"/> duplicate names-->
+                                <span th:text="${customer.fullName}" sec:authorize="hasAnyRole('ROLE_CUSTOMER')"/>
                             </td>
                             <td th:text="${customer.email}"></td>
                             <td th:text="${customer.phoneNumber}"></td>
@@ -93,9 +75,6 @@
                 <!-- /.box-body -->
             </div>
             <!-- /.box -->
-            <div class="pagination">
-                <div th:remove="tag" th:utext="${pagingButtons}"></div>
-            </div>
         </div>
     </div>
 </div>
